[gd_scene load_steps=2 format=3 uid="uid://cmmllid4n4pq5"]

[ext_resource type="Script" path="res://localization.gd" id="1_dvep3"]

[node name="Localization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvep3")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -241.0
offset_right = -37.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "切換"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -213.5
offset_right = 104.0
offset_bottom = -193.5
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "中文"
popup/item_0/id = 0
popup/item_1/text = "英文"
popup/item_1/id = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "weapon"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = 83.0
offset_right = 96.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "weapon"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 247.0
offset_top = -20.0
offset_right = 534.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
text = "weapon"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
